--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "css-loader": "6.7.1",
     "cssnano": "5.1.12",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "5.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "2.6.1",
     "postcss-loader": "7.0.1",
     "webpack": "5.76.0",
